--- a/src/components/imagelinkform/ImageLinkForm.css
+++ b/src/components/imagelinkform/ImageLinkForm.css
@@ -4,3 +4,16 @@ textarea:focus,
 button:focus {
     outline: none;
 }
+
+input:hover::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: grey;
+}
+input:hover::-moz-placeholder { /* Firefox 19+ */
+  color: grey;
+}
+input:hover:-ms-input-placeholder { /* IE 10+ */
+  color: grey;
+}
+input:hover:-moz-placeholder { /* Firefox 18- */
+  color: grey;
+}
